--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-#python3.6
+# python3.6 / python3.5
 anago==1.0.8
 gensim==3.6.0
 Keras==2.2.4
@@ -16,3 +16,5 @@ tensorboard==1.12.0
 tensorflow==1.12.0
 tensorflow-tensorboard==1.5.0
 tqdm==4.28.1
+pyhanlp==0.1.44
+
